# BankStatementReader

./: .gitignore  pyproject.toml
excelproject/: __init__.py  dbs.py  main.py  ocbc.py  utils.py
